# scentree-gen

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/content/getting_started/: citation.md  examples.md  installation.md
scentree/: __init__.py
scentree/config/: __init__.py
scentree/dim_reduction/: pca.py
scentree/estimator/: controller.py  estimator_orchestrator.py  ridge.py  scikit_base.py  stats_base.py  time_series.py  utils.py  var.py
scentree/estimators/: estimator_orchestrator.py  ridge.py  scikit_base.py  var.py
scentree/fan_generator/: stage_manager.py
scentree/io/: __init__.py  loader.py  writer.py
scentree/metrics/: rmse.py
scentree/scenario_generator/: __init__.py  generator.py  stage_manager.py
scentree/tree_construction/: __init__.py  ftc.py
scentree_gen/inputer/: reader.py
tests/: test_estimator_orchestrator.py  test_ftc.py  test_stage_manager.py
