[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scentree"
version = "0.0.1"
description = "A Python package to generate scenario trees for multi-stage stochastic programming problems."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Cristian Pachón García", email = "cristian.pachon@upc.edu"},
    {name = "Albert Solà Vilalta", email = "albert.sola.vilalta@upc.edu"},
    {name = "F.-Javier Heredia", email="f.javier.heredia@upc.edu"}
]
maintainers = [
    {name = "Cristian Pachón García", email = "cristian.pachon@upc.edu"},
    {name = "Albert Solà Vilalta", email = "albert.sola.vilalta@upc.edu"},
]
keywords = ["scenario tree", "forecasting", "ML", "stochastic optimisation"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=2.3",
    "pydantic>=2.5",
    "scikit-learn>=1.7",
    "scipy>=1.17.1",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
dev = [
    "black>=23.11,<24",
    "flake8>=6.1,<7",
    "ipykernel>=6.30,<7",
    "mypy>=1.8,<2",
    "pdbpp>=0.11,<0.12",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["scentree*"]

[tool.black]
line-length = 100
skip-string-normalization = false

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["sklearn.*", "scipy.*", "statsmodels.*"]
ignore_missing_imports = true
